--- a/ILF_ClaimsFraud_Modeling_v1.ipynb
+++ b/ILF_ClaimsFraud_Modeling_v1.ipynb
@@ -439,7 +439,8 @@
     "!pip install --upgrade --q fsspec==2023.9.2\n",
     "!pip install --q xgboost\n",
     "!pip install --q catboost\n",
-    "!pip install --q refractml"
+    "!pip install --q fosforio\n",
+    "!pip install --q fosforml"
    ]
   },
   {
