Moved to config

--- a/how_to_read_from_snowflake.ipynb
+++ b/how_to_read_from_snowflake.ipynb
@@ -169,7 +169,7 @@
    ],
    "source": [
     "config = configparser.ConfigParser()\n",
-    "config.read(\"snowflake_connection.ini\")"
+    "config.read(\"/config/snowflake_connection.ini\")"
    ]
   },
   {
