--- a/Claim_Amount_Regressor_Training_And_Registration.ipynb
+++ b/Claim_Amount_Regressor_Training_And_Registration.ipynb
@@ -314,7 +314,7 @@
    "source": [
     "from joblib import dump, load\n",
     "filename = \"Claims_Snowpark_XGB_Regression.joblib\" #Model version 1\n",
-    "dump(pipeline, '/model_artifacts/' + filename)"
+    "dump(pipeline, 'model_artifacts/' + filename)"
    ]
   },
   {
@@ -324,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load('/model_artifacts/' + filename)"
+    "model = load('model_artifacts/' + filename)"
    ]
   },
   {
@@ -538,7 +538,7 @@
    "outputs": [],
    "source": [
     "def model_prediction(data):\n",
-    "    model = load('/model_artifacts/Claims_Snowpark_XGB_Regression.joblib', mmap_mode='r')\n",
+    "    model = load('model_artifacts/Claims_Snowpark_XGB_Regression.joblib', mmap_mode='r')\n",
     "    data = data.replace(np.nan, pd.isna)\n",
     "    data[\"AUTO_YEAR\"] = data[\"AUTO_YEAR\"].astype(str)\n",
     "    return model.predict(data)['PREDICTION'] #Only returns Prediction\n",
@@ -875,7 +875,7 @@
    "source": [
     "from joblib import dump, load\n",
     "filename = \"Claims_Snowpark_XGB_Regression_v2.joblib\" #Model version 1\n",
-    "dump(pipeline, '/model_artifacts/' + filename)"
+    "dump(pipeline, 'model_artifacts/' + filename)"
    ]
   },
   {
@@ -885,7 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load('/model_artifacts/' + filename)"
+    "model = load('model_artifacts/' + filename)"
    ]
   },
   {
