--- a/Model_Output_Snowflake_Writeback.ipynb
+++ b/Model_Output_Snowflake_Writeback.ipynb
@@ -142,7 +142,7 @@
    "id": "4cdd8189",
    "metadata": {},
    "source": [
-    "# Claim Amount XGB Snowflake Model Prediction"
+    "# 1. Claim Amount XGB Snowflake Model Prediction"
    ]
   },
   {
@@ -210,7 +210,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "3998f21a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -428,6 +430,16 @@
    ],
    "source": [
     "df_backup.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad063c2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Fraud Claim Decision Tree C"
    ]
   }
  ],
