Added Model Artifacts

--- a/Claims_Fraud_Classifier_Registration.ipynb
+++ b/Claims_Fraud_Classifier_Registration.ipynb
@@ -1631,6 +1631,9 @@
    "outputs": [],
    "source": [
     "with open('/data/Output/Fraud_Classifier/Decisiontree_Fraudclassifier_v1.pkl', 'wb') as f:  # open a text file\n",
+    "    pickle.dump(dtc, f) # serialize the list\n",
+    "    \n",
+    "with open('model_artifacts/Decisiontree_Fraudclassifier_v1.pkl', 'wb') as f:  # open a text file\n",
     "    pickle.dump(dtc, f) # serialize the list"
    ]
   },
@@ -1642,6 +1645,9 @@
    "outputs": [],
    "source": [
     "with open('/data/Output/Fraud_Classifier/to_drop.pkl', 'wb') as f:  # open a text file\n",
+    "    pickle.dump(to_drop, f) # serialize the list\n",
+    "    \n",
+    "with open('model_artifacts/to_drop.pkl', 'wb') as f:  # open a text file\n",
     "    pickle.dump(to_drop, f) # serialize the list"
    ]
   },
@@ -1656,6 +1662,9 @@
     "'incident_type','collision_type','incident_severity','authorities_contacted','incident_time_of_day','property_damage','police_report_available']\n",
     "\n",
     "with open('/data/Output/Fraud_Classifier/cat_col.pkl', 'wb') as f:  # open a text file\n",
+    "    pickle.dump(cat_col, f) # serialize the list\n",
+    "\n",
+    "with open('model_artifacts/cat_col.pkl', 'wb') as f:  # open a text file\n",
     "    pickle.dump(cat_col, f) # serialize the list"
    ]
   },
@@ -1673,6 +1682,9 @@
     "       'property_claim', 'vehicle_claim']\n",
     "\n",
     "with open('/data/Output/Fraud_Classifier/num_col.pkl', 'wb') as f:  # open a text file\n",
+    "    pickle.dump(num_col, f) # serialize the list\n",
+    "    \n",
+    "with open('model_artifacts/num_col.pkl', 'wb') as f:  # open a text file\n",
     "    pickle.dump(num_col, f) # serialize the list"
    ]
   },
@@ -1689,6 +1701,9 @@
     "       'vehicle_claim']\n",
     "\n",
     "with open('/data/Output/Fraud_Classifier/num_col_test.pkl', 'wb') as f:  # open a text file\n",
+    "    pickle.dump(num_col_test, f) # serialize the list\n",
+    "\n",
+    "with open('model_artifacts/num_col_test.pkl', 'wb') as f:  # open a text file\n",
     "    pickle.dump(num_col_test, f) # serialize the list"
    ]
   },
@@ -1700,6 +1715,9 @@
    "outputs": [],
    "source": [
     "with open('/data/Output/Fraud_Classifier/scaler.pkl', 'wb') as f:  # open a text file\n",
+    "    pickle.dump(scaler, f) # serialize the list\n",
+    "\n",
+    "with open('model_artifacts/scaler.pkl', 'wb') as f:  # open a text file\n",
     "    pickle.dump(scaler, f) # serialize the list"
    ]
   },
@@ -1711,6 +1729,9 @@
    "outputs": [],
    "source": [
     "with open('/data/Output/Fraud_Classifier/actual_model_columns.pkl', 'wb') as f:  # open a text file\n",
+    "    pickle.dump(actual_model_columns, f) # serialize the list\n",
+    "    \n",
+    "with open('model_artifacts/actual_model_columns.pkl', 'wb') as f:  # open a text file\n",
     "    pickle.dump(actual_model_columns, f) # serialize the list"
    ]
   },
