--- a/Model_Output_Snowflake_Writeback.ipynb
+++ b/Model_Output_Snowflake_Writeback.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23e96041",
+   "id": "b8da375a",
    "metadata": {},
    "source": [
     "# 2. Fraud Claim Decision Tree Classifier"
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "6ab4d98a",
+   "id": "d664ac0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "dc3c4b9d",
+   "id": "731169b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "b90bd556",
+   "id": "521ac526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "fa259074",
+   "id": "9c0e753b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "b7bc197e",
+   "id": "40ea91db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "fef09007",
+   "id": "4cdfe80c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "fd6b0566",
+   "id": "b210cc57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "430ceba8",
+   "id": "8b33d5e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "6aff1a68",
+   "id": "d51a077f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "27af9660",
+   "id": "f27003a1",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "a0d76663",
+   "id": "66dd6c56",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "76d777d7",
+   "id": "0745466b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "1cfb6d9c",
+   "id": "9dc015e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "44be9fff",
+   "id": "885908c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "61f47f47",
+   "id": "f19b44b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "e445037e",
+   "id": "a2fda092",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "d33a449e",
+   "id": "dcabddec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "28bc900e",
+   "id": "0302d761",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "e8a6a997",
+   "id": "8865b1e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "ef722e43",
+   "id": "36691ac0",
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "e9ec8e9d",
+   "id": "901233b0",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "29d91194",
+   "id": "f8f3ab83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "7bd78962",
+   "id": "4c5c1b85",
    "metadata": {
     "scrolled": true
    },
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db93a04",
+   "id": "fc59fc5c",
    "metadata": {},
    "source": [
     "# Incident Date correction"
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "600e42b4",
+   "id": "6f7dfdf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "ee3e15e3",
+   "id": "ebc111cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "1f466c24",
+   "id": "c946d487",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "61bdc464",
+   "id": "5361fbd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,8 +1023,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2a200226",
+   "execution_count": 119,
+   "id": "78d7b45a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,6 +1032,18 @@
     "        df_backup.values.tolist(),\n",
     "        schema=df_backup.columns.tolist())\n",
     "DF_BACKUP.write.mode(\"overwrite\").save_as_table(\"FDC_Insurance.PUBLIC.AUTO_INSURANCE_CLAIMS_HARMONIZER_INSIGHT\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "285f4d44",
+   "metadata": {},
+   "source": [
+    "# Run below query once Snowflake table is created\n",
+    "\n",
+    "### ALTER TABLE FDC_INSURANCE.PUBLIC.AUTO_INSURANCE_CLAIMS_HARMONIZER_INSIGHT ADD COLUMN INCIDENT_DATETIME DATE\n",
+    "\n",
+    "### UPDATE FDC_INSURANCE.PUBLIC.AUTO_INSURANCE_CLAIMS_HARMONIZER_INSIGHT SET INCIDENT_DATETIME = TO_DATE (INCIDENT_DATE)"
    ]
   }
  ],
