--- a/Claims_Snowflake_backend_setup.ipynb
+++ b/Claims_Snowflake_backend_setup.ipynb
@@ -142,7 +142,7 @@
     "#Import all snowflake connection details from template variables.\n",
     "\n",
     "db_user = 'SPECTRA_DEMO_USER'\n",
-    "db_password = 'Spectra@2023'\n",
+    "db_password = '---------'\n",
     "db_account = 'fya62509.us-east-1'\n",
     "db_database =  'SPECTRA_DEMO'\n",
     "db_role = 'RL_TEST_FOSFOR_SPECTRA'\n",
@@ -220,7 +220,7 @@
    "source": [
     "#Import all snowflake connection details from template variables.\n",
     "db_user = 'MANISH'\n",
-    "db_password = 'Password@2023'\n",
+    "db_password = '--------'\n",
     "db_account = 'ug94937.us-east4.gcp'\n",
     "db_database =  'FDC_DATA_MANISH'\n",
     "db_role = 'MANISH'\n",
@@ -283,7 +283,7 @@
     "DF_STG_CUSTOMER=session1.createDataFrame(\n",
     "        STG_CUSTOMER.values.tolist(),\n",
     "        schema=STG_CUSTOMER.columns.tolist())\n",
-    "DF_STG_CUSTOMER.write.mode(\"overwrite\").save_as_table(\"FDC_DATA_MANISH.PUBLIC.ILF_STG_CUSTOMER\")"
+    "DF_STG_CUSTOMER.write.mode(\"overwrite\").save_as_table(\"FDC_Insurance.PUBLIC.ILF_STG_CUSTOMER\")"
    ]
   },
   {
@@ -296,7 +296,7 @@
     "DF_STG_CLAIM=session1.createDataFrame(\n",
     "        STG_CLAIM.values.tolist(),\n",
     "        schema=STG_CLAIM.columns.tolist())\n",
-    "DF_STG_CLAIM.write.mode(\"overwrite\").save_as_table(\"FDC_DATA_MANISH.PUBLIC.ILF_STG_CLAIM\")"
+    "DF_STG_CLAIM.write.mode(\"overwrite\").save_as_table(\"FDC_Insurance.PUBLIC.ILF_STG_CLAIM\")"
    ]
   },
   {
@@ -309,7 +309,7 @@
     "DF_STG_INCIDENT=session1.createDataFrame(\n",
     "        STG_INCIDENT.values.tolist(),\n",
     "        schema=STG_INCIDENT.columns.tolist())\n",
-    "DF_STG_INCIDENT.write.mode(\"overwrite\").save_as_table(\"FDC_DATA_MANISH.PUBLIC.ILF_STG_INCIDENT\")"
+    "DF_STG_INCIDENT.write.mode(\"overwrite\").save_as_table(\"FDC_Insurance.PUBLIC.ILF_STG_INCIDENT\")"
    ]
   },
   {
@@ -322,7 +322,7 @@
     "DF_STG_HARMONIZE_AI_CLAIMS=session1.createDataFrame(\n",
     "        STG_HARMONIZE_AI_CLAIMS.values.tolist(),\n",
     "        schema=STG_HARMONIZE_AI_CLAIMS.columns.tolist())\n",
-    "DF_STG_HARMONIZE_AI_CLAIMS.write.mode(\"overwrite\").save_as_table(\"FDC_DATA_MANISH.PUBLIC.ILF_STG_HARMONIZE_AI_CLAIMS\")"
+    "DF_STG_HARMONIZE_AI_CLAIMS.write.mode(\"overwrite\").save_as_table(\"FDC_Insurance.PUBLIC.ILF_STG_HARMONIZE_AI_CLAIMS\")"
    ]
   },
   {
@@ -335,7 +335,7 @@
     "DF_STG_POLICY=session1.createDataFrame(\n",
     "        STG_POLICY.values.tolist(),\n",
     "        schema=STG_POLICY.columns.tolist())\n",
-    "DF_STG_POLICY.write.mode(\"overwrite\").save_as_table(\"FDC_DATA_MANISH.PUBLIC.STG_POLICY\")"
+    "DF_STG_POLICY.write.mode(\"overwrite\").save_as_table(\"FDC_Insurance.PUBLIC.STG_POLICY\")"
    ]
   },
   {
@@ -348,7 +348,7 @@
     "DF_STG_CLAIM=session1.createDataFrame(\n",
     "        STG_CLAIM.values.tolist(),\n",
     "        schema=STG_CLAIM.columns.tolist())\n",
-    "DF_STG_CLAIM.write.mode(\"overwrite\").save_as_table(\"FDC_DATA_MANISH.PUBLIC.STG_CLAIM\")"
+    "DF_STG_CLAIM.write.mode(\"overwrite\").save_as_table(\"FDC_Insurance.PUBLIC.STG_CLAIM\")"
    ]
   }
  ],
@@ -368,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
