Corrected Table Name

--- a/Claims_Fraud_Classifier_Training.ipynb
+++ b/Claims_Fraud_Classifier_Training.ipynb
@@ -140,7 +140,8 @@
    "outputs": [],
    "source": [
     "# To read a specific dataset published from a snowflake connection\n",
-    "df = snowflake.get_dataframe(\"AUTO_INSURANCE_CLAIMS_DATA_PRODUCT\")"
+    "df = snowflake.get_dataframe(\"AUTO_INSURANCE_CLAIMS_DATA\")\n",
+    "#df = snowflake.get_dataframe(\"AUTO_INSURANCE_CLAIMS_DATA_PRODUCT\")"
    ]
   },
   {
@@ -423,7 +424,8 @@
     "session.sql('use database FDC_Insurance;').collect()\n",
     "session.sql('use schema FDC_Insurance.PUBLIC;').collect()\n",
     "\n",
-    "df = session.table('FDC_Insurance.PUBLIC.AUTO_INSURANCE_CLAIMS_DATA_PRODUCT')"
+    "df = session.table('FDC_Insurance.PUBLIC.AUTO_INSURANCE_CLAIMS_DATA')\n",
+    "#df = session.table('FDC_Insurance.PUBLIC.AUTO_INSURANCE_CLAIMS_DATA_PRODUCT')"
    ]
   },
   {
