--- a/Model_Output_Snowflake_Writeback.ipynb
+++ b/Model_Output_Snowflake_Writeback.ipynb
@@ -115,7 +115,8 @@
     "session.sql('use database FDC_Insurance;').collect()\n",
     "session.sql('use schema FDC_Insurance.PUBLIC;').collect()\n",
     "\n",
-    "df = session.table('FDC_Insurance.PUBLIC.AUTO_INSURANCE_CLAIMS_DATA_PRODUCT')"
+    "df = session.table('FDC_Insurance.PUBLIC.AUTO_INSURANCE_CLAIMS_DATA')\n",
+    "#df = session.table('FDC_Insurance.PUBLIC.AUTO_INSURANCE_CLAIMS_DATA_PRODUCT')"
    ]
   },
   {
