--- a/Claims_Fraud_Classi_PrPr.ipynb
+++ b/Claims_Fraud_Classi_PrPr.ipynb
@@ -5,12 +5,12 @@
    "id": "da4ac72d",
    "metadata": {},
    "source": [
-    "# Use Custom Template Notebook"
+    "# Use Customized Notebook Template (CLAIMS_RESERVE_Template)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 1,
    "id": "12eb34cf",
    "metadata": {
     "scrolled": true
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 2,
    "id": "8a6a2445-416b-4b1d-aaf5-e21c298777bb",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 3,
    "id": "a3de0458",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 4,
    "id": "cc65cd7a-2dc3-46dc-8d15-40fdcbdb5925",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 5,
    "id": "ab51ba08-d53e-4964-b441-eece144787af",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 6,
    "id": "3c124196-9419-4d6e-ac52-d4e1b50f319f",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 467,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 7,
    "id": "0733fafe-7680-4e5d-bf6a-d49557828fc7",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 8,
    "id": "c4541e70-5ad5-4017-a0bf-40fcab05c4ae",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 9,
    "id": "0ee58ee8",
    "metadata": {},
    "outputs": [],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 10,
    "id": "dea96c64",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 471,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 11,
    "id": "dd34e207",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 12,
    "id": "044dd5de",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 13,
    "id": "2729cb70-12b2-4c58-94cf-95ad69a100bb",
    "metadata": {},
    "outputs": [],
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 14,
    "id": "17d478fa",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 15,
    "id": "d563385c",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 477,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 16,
    "id": "5fa9b530",
    "metadata": {},
    "outputs": [],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 17,
    "id": "f9e156ce-748d-4979-9dcc-c8c664cbcc31",
    "metadata": {},
    "outputs": [],
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 18,
    "id": "cc07f2f1-7103-4cef-b63a-71bb0cef5bae",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 480,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 19,
    "id": "9b2aec4c",
    "metadata": {},
    "outputs": [],
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 20,
    "id": "6e41ff62",
    "metadata": {},
    "outputs": [],
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 21,
    "id": "0b248b0d",
    "metadata": {
     "scrolled": true
@@ -761,7 +761,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 483,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 22,
    "id": "00bc0322",
    "metadata": {
     "scrolled": true
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 23,
    "id": "0c7476d4-0dcf-4349-a685-7676b9edcee5",
    "metadata": {},
    "outputs": [
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 24,
    "id": "44eeac43",
    "metadata": {},
    "outputs": [],
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 25,
    "id": "ff74a5da",
    "metadata": {},
    "outputs": [],
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 26,
    "id": "91f64b39",
    "metadata": {
     "scrolled": true
@@ -924,7 +924,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 488,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 27,
    "id": "136ff93c-14fd-4d02-bad7-b9626f01e4b9",
    "metadata": {},
    "outputs": [
@@ -975,7 +975,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 489,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 28,
    "id": "5fd84c4c",
    "metadata": {},
    "outputs": [],
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 29,
    "id": "d6092193-81fa-47e3-9170-b6a2ae5dc2bf",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 30,
    "id": "e5dc17e2",
    "metadata": {},
    "outputs": [],
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 31,
    "id": "36da7ae2",
    "metadata": {},
    "outputs": [],
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 32,
    "id": "4f94a7d3",
    "metadata": {},
    "outputs": [],
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 33,
    "id": "4eac05ce",
    "metadata": {},
    "outputs": [],
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 34,
    "id": "dd265d84",
    "metadata": {},
    "outputs": [],
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 35,
    "id": "fc7b669b",
    "metadata": {
     "scrolled": true
@@ -1115,79 +1115,79 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>97201</th>\n",
-       "      <td>1.068203</td>\n",
-       "      <td>1.373298</td>\n",
-       "      <td>-0.406378</td>\n",
-       "      <td>1.300374</td>\n",
-       "      <td>0.885272</td>\n",
-       "      <td>-0.177919</td>\n",
-       "      <td>-0.678397</td>\n",
-       "      <td>1.227554</td>\n",
-       "      <td>-1.345625</td>\n",
-       "      <td>0.563707</td>\n",
-       "      <td>-0.951450</td>\n",
-       "      <td>0.551414</td>\n",
+       "      <th>48058</th>\n",
+       "      <td>0.879981</td>\n",
+       "      <td>-1.287351</td>\n",
+       "      <td>-1.758751</td>\n",
+       "      <td>-1.447126</td>\n",
+       "      <td>-1.068409</td>\n",
+       "      <td>1.019758</td>\n",
+       "      <td>2.173703</td>\n",
+       "      <td>-1.217866</td>\n",
+       "      <td>-0.449642</td>\n",
+       "      <td>-1.023098</td>\n",
+       "      <td>0.611741</td>\n",
+       "      <td>-1.212282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>201279</th>\n",
-       "      <td>-1.303096</td>\n",
-       "      <td>1.535847</td>\n",
-       "      <td>0.248390</td>\n",
-       "      <td>-1.415218</td>\n",
-       "      <td>0.343237</td>\n",
-       "      <td>1.357181</td>\n",
-       "      <td>2.170139</td>\n",
-       "      <td>0.003692</td>\n",
-       "      <td>-1.345625</td>\n",
-       "      <td>-0.728678</td>\n",
-       "      <td>1.747594</td>\n",
-       "      <td>1.199592</td>\n",
+       "      <th>175951</th>\n",
+       "      <td>0.298649</td>\n",
+       "      <td>1.880533</td>\n",
+       "      <td>-0.193247</td>\n",
+       "      <td>-1.489260</td>\n",
+       "      <td>-0.608735</td>\n",
+       "      <td>0.678298</td>\n",
+       "      <td>-0.678812</td>\n",
+       "      <td>0.005575</td>\n",
+       "      <td>0.446634</td>\n",
+       "      <td>-0.629869</td>\n",
+       "      <td>-0.081834</td>\n",
+       "      <td>-1.494458</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174476</th>\n",
-       "      <td>1.342659</td>\n",
-       "      <td>1.554531</td>\n",
-       "      <td>-0.255366</td>\n",
-       "      <td>1.008659</td>\n",
-       "      <td>-1.632763</td>\n",
-       "      <td>1.186614</td>\n",
-       "      <td>-0.678397</td>\n",
-       "      <td>-1.220170</td>\n",
-       "      <td>-1.345625</td>\n",
-       "      <td>-1.010841</td>\n",
-       "      <td>1.981111</td>\n",
-       "      <td>-0.998208</td>\n",
+       "      <th>71860</th>\n",
+       "      <td>-0.842079</td>\n",
+       "      <td>0.146140</td>\n",
+       "      <td>1.037382</td>\n",
+       "      <td>-0.785359</td>\n",
+       "      <td>0.468743</td>\n",
+       "      <td>-1.199734</td>\n",
+       "      <td>-0.678812</td>\n",
+       "      <td>1.229016</td>\n",
+       "      <td>1.342910</td>\n",
+       "      <td>0.825916</td>\n",
+       "      <td>-0.943270</td>\n",
+       "      <td>0.701528</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>231154</th>\n",
-       "      <td>-0.820054</td>\n",
-       "      <td>-0.730490</td>\n",
-       "      <td>1.591499</td>\n",
-       "      <td>-1.026853</td>\n",
-       "      <td>1.464270</td>\n",
-       "      <td>-1.201318</td>\n",
-       "      <td>-0.678397</td>\n",
-       "      <td>1.227554</td>\n",
-       "      <td>-0.449812</td>\n",
-       "      <td>-0.654292</td>\n",
-       "      <td>-0.981594</td>\n",
-       "      <td>-0.029001</td>\n",
+       "      <th>94335</th>\n",
+       "      <td>-1.171136</td>\n",
+       "      <td>-1.190165</td>\n",
+       "      <td>-0.006374</td>\n",
+       "      <td>-0.822010</td>\n",
+       "      <td>1.141898</td>\n",
+       "      <td>1.190488</td>\n",
+       "      <td>-0.678812</td>\n",
+       "      <td>0.005575</td>\n",
+       "      <td>-0.449642</td>\n",
+       "      <td>-0.847054</td>\n",
+       "      <td>-0.967559</td>\n",
+       "      <td>0.414887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>53287</th>\n",
-       "      <td>0.014292</td>\n",
-       "      <td>1.505953</td>\n",
-       "      <td>-0.908285</td>\n",
-       "      <td>0.913382</td>\n",
-       "      <td>1.628511</td>\n",
-       "      <td>-0.007352</td>\n",
-       "      <td>-0.678397</td>\n",
-       "      <td>0.003692</td>\n",
-       "      <td>1.341816</td>\n",
-       "      <td>-0.597943</td>\n",
-       "      <td>-0.640604</td>\n",
-       "      <td>0.780839</td>\n",
+       "      <th>202589</th>\n",
+       "      <td>-1.072419</td>\n",
+       "      <td>-1.677964</td>\n",
+       "      <td>-1.758751</td>\n",
+       "      <td>0.647333</td>\n",
+       "      <td>-1.718083</td>\n",
+       "      <td>0.336837</td>\n",
+       "      <td>0.747445</td>\n",
+       "      <td>0.005575</td>\n",
+       "      <td>-0.449642</td>\n",
+       "      <td>0.603273</td>\n",
+       "      <td>1.663802</td>\n",
+       "      <td>0.949580</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1195,35 +1195,35 @@
       ],
       "text/plain": [
        "        months_as_customer  policy_deductable  umbrella_limit  capital_gains  \\\n",
-       "97201             1.068203           1.373298       -0.406378       1.300374   \n",
-       "201279           -1.303096           1.535847        0.248390      -1.415218   \n",
-       "174476            1.342659           1.554531       -0.255366       1.008659   \n",
-       "231154           -0.820054          -0.730490        1.591499      -1.026853   \n",
-       "53287             0.014292           1.505953       -0.908285       0.913382   \n",
+       "48058             0.879981          -1.287351       -1.758751      -1.447126   \n",
+       "175951            0.298649           1.880533       -0.193247      -1.489260   \n",
+       "71860            -0.842079           0.146140        1.037382      -0.785359   \n",
+       "94335            -1.171136          -1.190165       -0.006374      -0.822010   \n",
+       "202589           -1.072419          -1.677964       -1.758751       0.647333   \n",
        "\n",
        "        capital_loss  incident_hour_of_the_day  number_of_vehicles_involved  \\\n",
-       "97201       0.885272                 -0.177919                    -0.678397   \n",
-       "201279      0.343237                  1.357181                     2.170139   \n",
-       "174476     -1.632763                  1.186614                    -0.678397   \n",
-       "231154      1.464270                 -1.201318                    -0.678397   \n",
-       "53287       1.628511                 -0.007352                    -0.678397   \n",
+       "48058      -1.068409                  1.019758                     2.173703   \n",
+       "175951     -0.608735                  0.678298                    -0.678812   \n",
+       "71860       0.468743                 -1.199734                    -0.678812   \n",
+       "94335       1.141898                  1.190488                    -0.678812   \n",
+       "202589     -1.718083                  0.336837                     0.747445   \n",
        "\n",
        "        bodily_injuries  witnesses  injury_claim  property_claim  \\\n",
-       "97201          1.227554  -1.345625      0.563707       -0.951450   \n",
-       "201279         0.003692  -1.345625     -0.728678        1.747594   \n",
-       "174476        -1.220170  -1.345625     -1.010841        1.981111   \n",
-       "231154         1.227554  -0.449812     -0.654292       -0.981594   \n",
-       "53287          0.003692   1.341816     -0.597943       -0.640604   \n",
+       "48058         -1.217866  -0.449642     -1.023098        0.611741   \n",
+       "175951         0.005575   0.446634     -0.629869       -0.081834   \n",
+       "71860          1.229016   1.342910      0.825916       -0.943270   \n",
+       "94335          0.005575  -0.449642     -0.847054       -0.967559   \n",
+       "202589         0.005575  -0.449642      0.603273        1.663802   \n",
        "\n",
        "        vehicle_claim  \n",
-       "97201        0.551414  \n",
-       "201279       1.199592  \n",
-       "174476      -0.998208  \n",
-       "231154      -0.029001  \n",
-       "53287        0.780839  "
+       "48058       -1.212282  \n",
+       "175951      -1.494458  \n",
+       "71860        0.701528  \n",
+       "94335        0.414887  \n",
+       "202589       0.949580  "
       ]
      },
-     "execution_count": 497,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
